<resources>
    <string name="app_name">Every Counter</string>
    <string name="detail_rename">Rename</string>
    <string name="detail_value">Value</string>
    <string name="detail_increment">Increment</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_hint">Value</string>
    <string name="detail_limit">Limit</string>
</resources>
